# stripe-olap

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  main.py  pyproject.toml  todo.txt
docs/: fact_dim.md  fact_table.md  invoice_fact_choice.md  nosql_joins_complexity.md  revision_concepts.md  snowflake_etl.md  snowflake_gcs.md
docs/schemas/: flake.mmd
scripts/: csv_builders.py  etl_to_snowflake.py  flatten_utils.py  gcp.py  generate_copy_into_sql.py  generate_create_tables.py  load_to_snowflake.py  olap_io.py  setup_gcs_integration.py
scripts/sql/: copy_into_tables.sql  create_stage.sql  create_stage_demo.sql  create_tables.sql  setup_snowflake_infra.sql  storage_integration_template.sql  view_for_analytics.sql
tests/: conftest.py  test_dim_tables.py  test_fact_invoices.py
tests/data/olap_outputs/: fact_invoices.csv
tests/data/oltp_dump/: db_dump_prod_2025-05-29_20-16-28.json
